@@ -11,11 +11,11 @@ installdirs:         site
 
 requires:
   perl:                               5.006
-  Labyrinth:                          5.20
+  Labyrinth:                          5.21
   Labyrinth::DIUtils::ImageMagick:    5.04
-  Labyrinth::Plugin::Core:            5.14
-  Labyrinth::Plugin::Articles::Diary: 1.00
-  Labyrinth::Plugin::Event:           1.01
+  Labyrinth::Plugin::Core:            5.15
+  Labyrinth::Plugin::Articles::Diary: 1.05
+  Labyrinth::Plugin::Event:           1.04
 recommends:
   Test::CPAN::Meta:                   0
   Test::CPAN::Meta::JSON:             0
