@@ -1,4 +1,10 @@
 Changes for the CPAN Testers Blog website
+=========================================
+
+        - upgrade to Labyrinth-5.21.
+        - upgrade to Labyrinth-Plugin-Core-5.15.
+        - upgrade to Labyrinth-Plugin-Articles-Diary 1.05.
+        - upgrade to Labyrinth-Plugin-Event 1.04.
 
 1.07    2014-02-16
         - removed unused files.
